--- a/SchoolHouseRock1/SchoolHouseRock1.csproj
+++ b/SchoolHouseRock1/SchoolHouseRock1.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Course.cs" />
+    <Compile Include="Department.cs" />
+    <Compile Include="Instructor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
